			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.1814 2001/07/25 06:37:33 itojun Exp $

<200107>
Wed Jul 25 15:33:06 JST 2001  itojun@iijlab.net
	* netbsd/sys/net/route.c: do not fill rmx_mtu too much on RTM_ADD/
	  RTM_RESOLVE.  this was merged by mistake during past kame work.

2001-07-25  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/(various files): correctly supported
	interface-local multicast:
	- install ff01::%ifname/32 when first configuring an interface.
	- changed the source address selection for ff01::xxxx.
	- changed the outgoing interface selection for ff01::xxxx.
	- prohibit packets towards ff01::xxx from being sent on the wire.
	- reject packets towards ff01::xxxx from the wire.

Wed Jul 25 11:52:34 JST 2001  itojun@iijlab.net
	* sys/netinet/if_gif.c: use encap_attach(), instead of
	  encap_attach_func().  enables us to use radix address match in
	  ip_encap.c.

Wed Jul 25 03:51:34 JST 2001  itojun@iijlab.net
	* sys/netinet/ip_encap.c: use radix table lookup for entries registered
	  through encap_attach() API (address pairs).  still not sure if it
	  gives us any performance improvement, but should be much better
	  when you have thoudsands of gif interfaces.
	  
	  should be used with gif interface code prior to Mar 2000, otherwise
	  there's no effect (in Mar 2000 we have transitioned gif code to
	  encap_attach_func(), for more security validations).

2001-07-24  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/in6.c (in6_control): in the SIOCDIFADDR_IN6
	case, if the corresponding prefix can be removed, just call
	prelist_remove(), not changing the expire value.

Tue Jul 24 17:54:10 JST 2001  itojun@iijlab.net
	* sys/netinet6/in6_prefix.c: RIP.

2001-07-24  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/ping6/ping6.c: use bind(2) to specify the source
	address with the -S option.  (Unfortunately) IPV6_PKTINFO is not a
	good idea, because it cannot handle scoped addresses very well.
